exports[`test converts a class mount with a pure function in it 1`] = `
<div
  className="class-with-pure class"
  onClick={[Function]}>
  <BasicPure
    className="nested-pure">
    <span>
      <strong>
        Hello!
      </strong>
    </span>
    <span
      className="empty" />
  </BasicPure>
</div>
`;

exports[`test converts basic class shallow 1`] = `
<div
  className="basic-class class"
  onClick={[Function]}>
  <div
    className="group"
    id="group-id">
    <span>
      <strong>
        Hello!
      </strong>
    </span>
    <span
      className="empty" />
  </div>
</div>
`;

exports[`test converts basic pure shallow 1`] = `
<div
  className="basic-pure pure"
  onClick={[Function]}>
  <div
    className="group"
    id="group-id">
    <span>
      <strong>
        Hello!
      </strong>
    </span>
    <span
      className="empty" />
  </div>
</div>
`;
